# backend/api/openapi.yml
@@ -199,16 +199,22 @@ components:
     UpdateTask:
       type: object
       properties:
+        id:
+          type: integer
+          format: int64
+          description: The unique identifier for the task.
         title:
           type: string
-          description: The updated title of the task.
+          description: The title of the new task.
+        text:
+          type: string
+          description: The description of the task.
         completed:
           $ref: "#/components/schemas/CompletedEnum"
         counter:
           $ref: "#/components/schemas/Counter"
       required:
         - title
-        - completed
     Error:
       description: Represents error object
       type: object
